extend developer packages list

--- a/developer-env.cfg
+++ b/developer-env.cfg
@@ -8,10 +8,13 @@ Maintainer: Sergey Lagner <developer@lagner.ru>
 Depends: build-essential,
  clang,
  cmake,
+ curl,
+ default-jdk,
  default-jre,
  git,
  ninja-build,
  python3-pip,
- tmux
+ tmux,
+ wget
 Description: Developer env
  Helper package to keep env in sync
