--- a/user-env.cfg
+++ b/user-env.cfg
@@ -5,11 +5,14 @@ Standards-Version: 3.9.2
 Package: user-env
 Version: 2.0
 Maintainer: Sergey Lagner <developer@lagner.ru>
-Depends: vim,
- neovim,
+Depends: chromium-browser,
+ fzy,
+ htop,
  mc,
- chromium-browser,
  nautilus-dropbox,
+ neovim,
+ silversearcher-ag,
+ vim,
  vlc
 Description: User env
  Helper package to keep env in sync
